force-app/main/default/objects/Retreat_Booking__c/Retreat_Booking__c.object-meta.xml
<CustomObject>
    <description>Used for retreat bookings through family portal.  See Property__C.</description>
    <label>Retreat Booking</label>
    <nameField>
        <displayFormat>RB-{000000}</displayFormat>
        <label>Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retreat Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>