force-app/main/default/objects/Retreat_Booking__c/fields/Any_other_special_requirements__c.field-meta.xml
<CustomField>
    <fullName>Any_other_special_requirements__c</fullName>
    <label>Any other special requirements</label>
    <type>TextArea</type>
</CustomField>