force-app/main/default/objects/Retreat_Booking__c/fields/Booking_Contact_and_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Contact_and_Status__c</fullName>
    <formula>Contact__r.FirstName + &apos; &apos; +  Contact__r.LastName + &apos; &apos;  + TEXT(Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Contact and Status</label>
    <type>Text</type>
</CustomField>