force-app/main/default/objects/Retreat_Booking__c/fields/Booking_Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Booking_Long_Name__c</fullName>
    <formula>Property__r.Name +&apos; (&apos;+ TEXT(Status__c) +&apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Long Name</label>
    <type>Text</type>
</CustomField>