force-app/main/default/objects/Retreat_Booking__c/fields/Cleaner_Notified__c.field-meta.xml
<CustomField>
    <fullName>Cleaner_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cleaner Notified</label>
    <type>Checkbox</type>
</CustomField>