force-app/main/default/objects/Retreat_Booking__c/fields/Dinning_And_Activies__c.field-meta.xml
<CustomField>
    <fullName>Dinning_And_Activies__c</fullName>
    <label>Dinning And Activies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent to Family</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Sent to TTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>