force-app/main/default/objects/Retreat_Booking__c/fields/Duty_of_care__c.field-meta.xml
<CustomField>
    <fullName>Duty_of_care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duty of care</label>
    <type>Checkbox</type>
</CustomField>