force-app/main/default/objects/Retreat_Booking__c/fields/Emergency_Contact_RelationShip__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_RelationShip__c</fullName>
    <label>Emergency Contact RelationShip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>