force-app/main/default/objects/Retreat_Booking__c/fields/Family_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Family_Type_1__c</fullName>
    <formula>TEXT( Account__r.Family_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Type</label>
    <type>Text</type>
</CustomField>