force-app/main/default/objects/Retreat_Booking__c/fields/Family_Type__c.field-meta.xml
<CustomField>
    <fullName>Family_Type__c</fullName>
    <label>Family Type At Registration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>