force-app/main/default/objects/Retreat_Booking__c/fields/Indemnity__c.field-meta.xml
<CustomField>
    <fullName>Indemnity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indemnity</label>
    <type>Checkbox</type>
</CustomField>