force-app/main/default/objects/Retreat_Booking__c/fields/Length_Of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Length_Of_Stay__c</fullName>
    <formula>Check_Out_Date__c -  Check_In_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length Of Stay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>