force-app/main/default/objects/Retreat_Booking__c/fields/Number_of_household_members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_household_members__c</fullName>
    <formula>Contact__r.Account.npsp__Number_of_Household_Members__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of household members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>