force-app/main/default/objects/Retreat_Booking__c/fields/Photographer__c.field-meta.xml
<CustomField>
    <fullName>Photographer__c</fullName>
    <label>Photographer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Photographer Notified</fullName>
            </value>
            <value>
                <fullName>Photographer Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>