force-app/main/default/objects/Retreat_Booking__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Retreat Bookings</relationshipLabel>
    <relationshipName>Retreat_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>