force-app/main/default/objects/Retreat_Booking__c/fields/Property_Notified__c.field-meta.xml
<CustomField>
    <fullName>Property_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property Notified</label>
    <type>Checkbox</type>
</CustomField>