force-app/main/default/objects/Retreat_Booking__c/fields/Rebooked__c.field-meta.xml
<CustomField>
    <fullName>Rebooked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when a family has cancelled and been rebooked. Helps with reporting.</description>
    <inlineHelpText>Check this box when a family has cancelled and been rebooked.</inlineHelpText>
    <label>Rebooked</label>
    <type>Checkbox</type>
</CustomField>