force-app/main/default/objects/Retreat_Booking__c/fields/Send_confirmation_email__c.field-meta.xml
<CustomField>
    <fullName>Send_confirmation_email__c</fullName>
    <label>Send confirmation email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>