force-app/main/default/objects/Retreat_Booking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rebooked</fullName>
            </value>
            <value>
                <fullName>Waitlisted Q1</fullName>
            </value>
            <value>
                <fullName>Waitlisted Q2</fullName>
            </value>
            <value>
                <fullName>Waitlisted Q3</fullName>
            </value>
            <value>
                <fullName>Waitlisted Q4</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
                <isActive>false</isActive>
                <label>Waitlisted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>