force-app/main/default/objects/Retreat_Booking__c/fields/Transport__c.field-meta.xml
<CustomField>
    <fullName>Transport__c</fullName>
    <label>Transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fuel Card Requested</fullName>
            </value>
            <value>
                <fullName>Fuel Card Sent</fullName>
            </value>
            <value>
                <fullName>Flights Required</fullName>
            </value>
            <value>
                <fullName>Flights requested from TTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>