force-app/main/default/objects/Retreat_Booking__c/fields/TTA_Notified__c.field-meta.xml
<CustomField>
    <fullName>TTA_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TTA Notified</label>
    <type>Checkbox</type>
</CustomField>