force-app/main/default/objects/Retreat_Booking__c/fields/Wheelchair_Access_Limited_Mobility__c.field-meta.xml
<CustomField>
    <fullName>Wheelchair_Access_Limited_Mobility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wheelchair Access/Limited Mobility</label>
    <type>Checkbox</type>
</CustomField>