force-app/main/default/objects/Retreat_Booking__c/validationRules/Check_In_Date_Required_for_Bookings.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_In_Date_Required_for_Bookings</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    IF(
        OR(
            ISPICKVAL(Status__c, &quot;Confirmed&quot;),
            ISPICKVAL(Status__c, &quot;Completed&quot;),
            ISPICKVAL(Status__c, &quot;Rebooked&quot;)
        ),
        ISBLANK(Check_In_Date__c),
        false
    ))</errorConditionFormula>
    <errorMessage>Please add a check-in date or update your Retreat Booking Status.</errorMessage>
</ValidationRule>