force-app/main/default/objects/Retreat_Booking__c/validationRules/Check_In_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_In_Date_Validation</fullName>
    <active>true</active>
    <description>Checkin date has to be before check out day.
Minimum length of stay 1 night</description>
    <errorConditionFormula>Check_Out_Date__c &lt;=  Check_In_Date__c</errorConditionFormula>
    <errorDisplayField>Check_In_Date__c</errorDisplayField>
    <errorMessage>Checkin date has to be before check out day, min stay 1 night</errorMessage>
</ValidationRule>