force-app/main/default/objects/Retreat_Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Check_In_Date__c</columns>
    <columns>Check_Out_Date__c</columns>
    <columns>Guests__c</columns>
    <columns>Length_Of_Stay__c</columns>
    <columns>Contact__c</columns>
    <columns>Property__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>TTA_Notified__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>