force-app/main/default/objects/Retreat_Booking__c/listViews/All_Active.listView-meta.xml
<ListView>
    <fullName>All_Active</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Property__c</columns>
    <columns>Status__c</columns>
    <columns>Check_In_Date__c</columns>
    <columns>Check_Out_Date__c</columns>
    <columns>Any_other_special_requirements__c</columns>
    <columns>Property_Address__c</columns>
    <columns>Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </filters>
    <label>All Active</label>
</ListView>