force-app/main/default/objects/Retreat_Booking__c/listViews/Coffs_Harbour_Big_4_Park.listView-meta.xml
<ListView>
    <fullName>Coffs_Harbour_Big_4_Park</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Check_In_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Property__c</columns>
    <columns>Cleaner_Notified__c</columns>
    <columns>Property_Notified__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Property__c</field>
        <operation>equals</operation>
        <value>Coffs Harbour (NSW) – Big 4 Park Beach Holiday Park</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Confirmed,Pending</value>
    </filters>
    <label>Coffs Harbour Big 4 Park</label>
</ListView>