force-app/main/default/objects/Retreat_Booking__c/listViews/Respite_Team_Retreat_Booking.listView-meta.xml
<ListView>
    <fullName>Respite_Team_Retreat_Booking</fullName>
    <columns>NAME</columns>
    <columns>Check_In_Date__c</columns>
    <columns>Check_Out_Date__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>Respite Team</label>
    <queue>Respite_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>