force-app/main/default/objects/Retreat_Booking__c/listViews/Salamander_Bay.listView-meta.xml
<ListView>
    <fullName>Salamander_Bay</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Check_In_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Property__c</columns>
    <columns>Cleaner_Notified__c</columns>
    <columns>TTA_Notified__c</columns>
    <columns>Transport__c</columns>
    <columns>Special_Requests__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Property__c</field>
        <operation>equals</operation>
        <value>Salamander Bay (NSW)</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Confirmed,Pending</value>
    </filters>
    <label>Salamander Bay</label>
</ListView>