force-app/main/default/objects/Retreat_Booking__c/listViews/Salamander_Bay_Not_Cancelled.listView-meta.xml
<ListView>
    <fullName>Salamander_Bay_Not_Cancelled</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Property__c</field>
        <operation>equals</operation>
        <value>Salamander Bay (NSW)</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Declined,Cancelled</value>
    </filters>
    <label>Salamander Bay - Not Cancelled</label>
</ListView>