force-app/main/default/objects/Retreat_Booking__c/listViews/West_Beach.listView-meta.xml
<ListView>
    <fullName>West_Beach</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Check_In_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Property__c</columns>
    <columns>Cleaner_Notified__c</columns>
    <columns>Property_Notified__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Property__c</field>
        <operation>equals</operation>
        <value>West Beach (SA) – Big 4 Adelaide Shores Caravan Park</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Confirmed,Pending</value>
    </filters>
    <label>West Beach Parks</label>
</ListView>